# cge_modeling

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  REQUIREMENTS.txt  environment-dev.yaml  environment.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  rtd-link-preview.yml  run_tests.yml
cge_modeling/: __init__.py  _version.py  cge.py  numba_tools.py  optimize.py  output_tools.py  plotting.py  production_functions.py  sympy_tools.py  utils.py
cge_modeling/base/: __init__.py  blocks.py  build.py  cge.py  function_wrappers.py  primitives.py  utilities.py
cge_modeling/compile/: constants.py  euler.py  jax.py  numba.py  numba_tools.py  pytensor.py  pytensor_tools.py  sympy.py  sympytensor.py
cge_modeling/gams/: excel_constants.py  from_excel.py  gams_constants.py
cge_modeling/pytensorf/: __init__.py  compile.py  optimize.py  rewrites.py
cge_modeling/tools/: numba_tools.py  output_tools.py  parsing.py  pytensor_tools.py  rebalance.py  sympy_tools.py  utils.py
conda_envs/: cge_test.yml  cge_test_windows.yml  environment-dev.yaml  environment.yaml  environment.yml  environment_dev.yml  environment_docs.yml
docs/source/: conf.py  index.rst  user_guide.rst
docs/source/api/: base.rst
docs/source/contributing/: contributing.rst  pr_step_by_step.rst
examples/: run_all.py
examples/data/: simple_rbc_data.csv
examples/notebooks/: rbc.ipynb
notebooks/: 000. Construct SAM from GTAP Data .ipynb  001. GTAP Sam to OECD Model.ipynb  01 - Simple MOdel.ipynb  01 - Simple Model, No Sectors.ipynb  02 - 3 Sector, Cobb Douglass Production.ipynb  02 - Three Goods with CES Production.ipynb  02 - Three Goods.ipynb  03 - 3 Goods CES with Endogenous Labor.ipynb  03 - Factor Tax - Automatic Sam.ipynb  03 - Public Administration.ipynb  03 - Three Goods with CES Production.ipynb  03b - Four Goods CES with Energy Factor.ipynb  04 - 3 Goods CES with Endogenous Labor - BETA.ipynb  04 - Energy Endog L.ipynb  04 - Investment by Firms.ipynb  04 - Lukas20231207.ipynb  05 - Benchmark Model.ipynb  05 - International Trade.ipynb  05b - International Trade.ipynb  06  - Benchmark Energy Endog L-Copy1.ipynb  06 - Benchmark Energy Model.ipynb  06 - Simple Model with CES Production.ipynb  07 - Ext_Energy_Sector.ipynb  07 - Seperate Energy Sector with automatic CES string.ipynb  07 - Seperate Energy Sector.ipynb  08 - Ext Energy Gov Endog L.ipynb  08 - Seperate Energy Sector and two VC.ipynb  09 - Seperate Energy Sector extended Bundler-Copy1.ipynb  09 - Seperate Energy Sector extended Bundler.ipynb  09 - Seperate Energy Sector test inv-Copy1.ipynb  09 - Seperate Energy Sector test inv.ipynb  10 - Benchmark + Lukas.ipynb  10 - CES Energy bundler Taxex.ipynb  10 - CES Energy bundler backward calibration.ipynb  10 - Factor Tax - Automatic Sam.ipynb  11 - Energy full taxes.ipynb  11 - Energy taxes-Copy1.ipynb  11 - Energy taxes.ipynb  11 - Three Goods with Endogenous Labor Choice (CRRA).ipynb  12 - Energy taxes CRRA PyTensor.ipynb  (+12 more)
notebooks/Old Notebooks/: 01 - Simple Model.ipynb  02 - Three Goods.ipynb  02b - Three Goods CES Production.ipynb  03 - Public Administration.ipynb  03b - Four Goods CES with Energy Factor.ipynb  04 - Investment by Firms.ipynb  04b - Investment by Firms 2.ipynb  05 - International Trade.ipynb  05c - Armington Trade at the Border.ipynb  05d - Armington Trade at User Level.ipynb  07 - Ext_Energy_Sector.ipynb  09 - Benchmark + Lukas.ipynb  09 - Seperate Energy Sector and two VC energy tax.ipynb  10 - Benchmark + Lukas PT.ipynb  A04 - Energy Endog L.ipynb  A05 - Benchmark Model.ipynb
notebooks/Tests and Ohter/: Adventures in Linearization.ipynb  Euler Approximation Illustrated.ipynb  Factor Tax Test.ipynb  Groking transpose in Leontief.ipynb  Linearization in Pytensor.ipynb  Missing Data Demo.ipynb  Public Admin redux.ipynb  Pytensor to latex.ipynb  Test Model.ipynb  Test model with subscripts.ipynb
notebooks/data/: 08_sam - Copy.csv  08_sam.csv  09_cge_params.json  10_sam_tax2.csv  10_sam_tax3.csv  10_sam_tax4.csv  10_sam_tax_use_income.csv  11_sam_tax.csv  11_sam_tax.xlsx  11_sam_tax_energy.csv  11_sam_tax_energy2.csv  12_sam_tax_energy_gtap_style.csv  USA3x3.csv  a04_sam.csv  albania_sam.csv  baseline_energy_sam.csv  cge10_sam.csv  energy_sec_ext_sam.csv  factor_tax - Copy.csv  factor_tax.csv  gov_energy_sam.csv  lesson_2_sam.csv  lesson_3_sam.csv  lesson_4_sam.csv  lesson_5_sam.csv  lesson_6_sam.csv  lesson_6b_sam.csv  sam_test.csv
notebooks/oecd_model/: energy_grid.py  energy_producing_firms.py  final_goods_firm.py  government.py  household.py  international_trade.py  investment.py  load_oecd_model.py  market_clearing.py  model_building_tools.py  oecd_calibration.py
sphinxext/: generate_gallery.py
tests/: test_cge_model.py  test_compile.py  test_model_objects.py  test_numba_tools.py  test_optimize.py  test_plotting.py  test_primitives.py  test_production_functions.py  test_pytensorf.py  test_rebalance.py  test_rewrite.py  test_sympy_parse.py  test_utilities.py
tests/base/: test_build.py  test_cge.py  test_function_wrappers.py  test_utilities.py
tests/compile/: test_euler.py  test_pytensor_tools.py
tests/data/: unbalanced_sam.csv
tests/pytensorf/: test_compile.py  test_optimize.py
tests/tools/: test_rebalance.py
tests/utilities/: fake_data.py  models.py
tools/: export_notebooks_to_python.py  nbgenerate.py
(+10 files in other folders)
