[metadata]
name = cge_modeling
version = 0.0.1
description = A package for working with computable general equilibrium (CGE) models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/cge_modeling
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    numba
    numpy
    sympy
    scipy
    pandas
    ipython
    pytensor
    latextable
    texttable
    sympytensor

[options.packages.find]
exclude = tests*
