[metadata]
name = cge_modeling
version = 0.0.3
description = A package for working with computable general equilibrium (CGE) models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/cge_modeling
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    setuptools
    numba
    numpy
    sympy<1.13
    scipy
    pandas
    joblib
    pytensor
    latextable
    texttable
    sympytensor
    xarray
    arviz
    fastprogress
    numba-progress
    matplotlib


[options.packages.find]
exclude = [tests*, docs*, sphinxext*, notebooks*, _thumbnails*]
